font-weight aboupage mobile version test to fix bug about pagenotfound not showing at netlify

--- a/src/index.css
+++ b/src/index.css
@@ -938,6 +938,7 @@ a.header-left:hover {
    .aboutText {
       display: block;
       width: 100%;
+      font-weight: bold;
    }
    .aboutText > h1 {
       font-size: 10px;
